force-app/main/default/objects/ClickSendSMS__SMSSettings__c/ClickSendSMS__SMSSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores sms settings values like api name ,user name ,key etc..</description>
    <label>SMS Settings</label>
</CustomObject>