force-app/main/default/objects/ClickSendSMS__SMSSettings__c/fields/ClickSendSMS__api_key__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__api_key__c</fullName>
    <label>api_key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>