force-app/main/default/objects/ClickSendSMS__SMSSettings__c/fields/ClickSendSMS__EndPointURL__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__EndPointURL__c</fullName>
    <defaultValue>&quot;https://rest.clicksend.com/v3/sms/send&quot;</defaultValue>
    <label>EndPointURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>