force-app/main/default/objects/ClickSendSMS__SMSSettings__c/fields/ClickSendSMS__From_Number__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__From_Number__c</fullName>
    <label>From Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>