force-app/main/default/objects/ClickSendSMS__SMSSettings__c/fields/ClickSendSMS__Password__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__Password__c</fullName>
    <description>ClcikSend account password.</description>
    <label>Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>