force-app/main/default/objects/ClickSendSMS__SMSSettings__c/fields/ClickSendSMS__UserName__c.field-meta.xml
<CustomField>
    <fullName>ClickSendSMS__UserName__c</fullName>
    <label>UserName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>